--- a/pom.xml
+++ b/pom.xml
@@ -96,6 +96,12 @@
             <version>2.7.0</version>
         </dependency>
 
+        <!-- fastjson  -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.35</version>
+        </dependency>
     </dependencies>
 
 
